--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,6 +1,8 @@
+Flask==1.1.2
+grpcio-testing==1.30.0
 pytest==5.4.3
 pytest-cov==2.10.0
 pytest-mock==3.2.0
 pytest-timeout==1.4.1
-grpcio-testing==1.30.0
-Flask==1.1.2
+sphinx==3.1.2
+sphinx-autodoc-typehints==1.11.0
