--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ ed25519==1.4; sys_platform != "win32" and sys_platform != "cygwin"
 pure25519==0.0.1; sys_platform == "win32" or sys_platform == "cygwin"
 protobuf==3.12.2
 pynacl==1.4.0
+base58==2.0.1
