--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,6 +2,7 @@ Flask==1.1.2
 grpcio-testing==1.30.0
 pytest==5.4.3
 pytest-cov==2.10.0
+pytest-freezegun==0.4.2
 pytest-mock==3.2.0
 pytest-timeout==1.4.1
 sphinx==3.1.2
