--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 grpcio==1.34.1
-agora-api==0.25.1
+agora-api==0.26.0
 kin-base==1.4.1
 ed25519==1.4; sys_platform != "win32" and sys_platform != "cygwin"
-pure25519==0.0.1; sys_platform == "win32" or sys_platform == "cygwin"
+pure25519==0.0.1
 protobuf==3.12.2
 pynacl==1.4.0
 base58==2.0.1
